[REFACTOR] Change method names and better response name with constructor